trunk/Archive2/9f/5b7a5a38686931/output
main.cpp: In function 'int main()':
main.cpp:10:10: error: too many braces around initializer for 'int' [-fpermissive]
   f({{1}}); // f(A(1)) should be printed, not f(1)
          ^
main.cpp: At global scope:
main.cpp:12:1: error: 'Comment' does not name a type
 Comment 1
 ^
